# MerkleTree_Rust

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: debug_functions.rs  lib.rs  treenode.rs  unit_tests.rs
src/treenode/: hash_structures.rs
